# ChangeLog for net-libs/aqhbci
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/aqhbci/ChangeLog,v 1.11 2005/03/14 11:36:24 hanno Exp $

*aqhbci-1.0.3_beta (14 Mar 2005)

  14 Mar 2005; Hanno Boeck <hanno@gentoo.org> +aqhbci-1.0.3_beta.ebuild:
  Version bump.

  14 Feb 2005; Simon Stelling <blubb@gentoo.org> aqhbci-1.0.2_beta.ebuild:
  added ~amd64

  05 Feb 2005; Bryan Østergaard <kloeri@gentoo.org>
  aqhbci-1.0.2_beta.ebuild:
  ~alpha keyword.

*aqhbci-1.0.2_beta (31 Jan 2005)

  31 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqhbci-1.0.2_beta.ebuild:
  Version bump.

  30 Jan 2005; Jason Wever <weeve@gentoo.org> aqhbci-0.9.19_beta.ebuild:
  Added ~sparc keyword wrt bug #73702.

*aqhbci-0.9.19_beta (23 Jan 2005)

  23 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqhbci-0.9.19_beta.ebuild:
  Version bump.

*aqhbci-0.9.16_beta (13 Jan 2005)

  13 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqhbci-0.9.16_beta.ebuild:
  Version bump.

  03 Jan 2005; Chris White <chriswhite@gentoo.org>
  aqhbci-0.9.14_beta.ebuild:
  Marked per bug #73702

  27 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  aqhbci-0.9.14_beta.ebuild:
  ~alpha keyword.

  26 Dec 2004; Jason Wever <weeve@gentoo.org> aqhbci-0.9.14_beta.ebuild:
  Added ~sparc keyword wrt bug #73702.

  21 Dec 2004; Hanno Boeck <hanno@gentoo.org> aqhbci-0.9.14_beta.ebuild:
  Initial commit (thanks to Florian Mueller in bug #72472).
