@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/aqhbci
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/aqhbci/ChangeLog,v 1.11 2005/03/14 11:36:24 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/aqhbci/ChangeLog,v 1.12 2005/04/13 07:04:49 hanno Exp $
+
+*aqhbci-1.0.6 (13 Apr 2005)
+
+  13 Apr 2005; Hanno Boeck <hanno@gentoo.org> +aqhbci-1.0.6.ebuild:
+  Version bump.
 
 *aqhbci-1.0.3_beta (14 Mar 2005)
 
